Initialize the aKode volume after instantiating the playback engine.

BUG:118265

svn path=/branches/KDE/3.5/kdemultimedia/juk/; revision=488424